syntax = "proto3";

option csharp_namespace = "ProductService.Protos";

package product;

service ProductService {
  rpc GetProduct (GetProductRequest) returns (ProductResponse);
  rpc GetAllProducts (GetAllProductsRequest) returns (GetAllProductsResponse);
}

message GetProductRequest {
  int32 id = 1;
}

message GetAllProductsRequest {
}

message ProductResponse {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
}

message GetAllProductsResponse {
  repeated ProductResponse products = 1;
}

